[package]
name = "bsky-streamer"
version = "0.1.0"
edition = "2021"

[dependencies]
atrium-api = { version = "0.24.8", features = ["tokio"] }
chrono = { version = "0.4.38", features = ["serde"] }
cid = "0.11.1"
cid_old = { package = "cid", version = "0.10.1" }
color-eyre = "0.6.3"
futures = "0.3.31"
ipld-core = "0.4.1"
rs-car = "0.4.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_ipld_dagcbor = "0.6.1"
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["full"] }
tokio-tungstenite = { version = "0.24.0", features = ["native-tls", "url"] }
tracing = { version = "0.1.41", features = ["async-await", "log"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
trait-variant = "0.1.2"
update_rate = "2.0.1"
url = { version = "2.5.4", features = ["serde"] }
