[package]
name = "skystreamer-prometheus-exporter"
version = "0.2.0"
edition = "2021"

authors = ["Cappy Ishihara <cappy@fyralabs.com>"]
description = "Prometheus exporter for SkyStreamer"
readme = "../README.md"
license = "MIT"
repository = "https://github.com/FyraLabs/skystreamer"
categories = ["data-structures", "visualization"]

[dependencies]
skystreamer = { path = "../skystreamer" }
color-eyre = "0.6.3"
prometheus_exporter = "0.8.5"
tokio = { version = "1.42.0", features = ["full"] }
tokio-stream = { version = "0.1.16", features = ["full"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
futures = "0.3.31"
tracing-test = "0.2.5"
langtag = "0.4.0"
url = "2.5.4"
