[package]
name = "skystreamer"
version = "0.1.0"
edition = "2021"

authors = ["Cappy Ishihara <cappy@fyralabs.com>"]
description = "AT Firehose collector for Bluesky"
license = "MIT"
repository = "https://github.com/FyraLabs/skystreamer"
categories = [
    "web-programming::websocket",
    "data-structures",
    "web-programming::http-client",
]
keywords = ["bluesky", "firehose", "atproto", "bluesky-social"]

[dependencies]
async-trait = "0.1.83"
atrium-api = { version = "0.24.8", features = ["tokio"] }
chrono = { version = "0.4.38", features = ["serde"] }
cid = "0.11.1"
cid_old = { package = "cid", version = "0.10.1" }
futures = "0.3.31"
ipld-core = "0.4.1"
rs-car = "0.4.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_ipld_dagcbor = "0.6.1"
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["full"] }
tokio-stream = { version = "0.1.16", features = ["full"] }
tokio-tungstenite = { version = "0.24.0", features = ["native-tls", "url"] }
tracing = { version = "0.1.41", features = ["async-await", "log"] }
trait-variant = "0.1.2"
clap = { version = "4.5.21", features = ["derive", "env"] }
thiserror = "2.0.3"
