[package]
name = "skystreamer"
version = "0.2.1"
edition = "2021"

authors = ["Cappy Ishihara <cappy@fyralabs.com>"]
description = "Idiomatic Rust library for the AT Firehose streaming API"
license = "MIT"
repository = "https://github.com/FyraLabs/skystreamer"
categories = [
    "web-programming::websocket",
    "data-structures",
    "web-programming::http-client",
]
keywords = ["bluesky", "firehose", "atproto", "bluesky-social"]
readme = "../README.md"

[dependencies]
atrium-api = { version = "0.24", features = ["tokio"] }
chrono = { version = "0.4", features = ["serde"] }
cid = "0.11"
cid_old = { package = "cid", version = "0.10.1" }
futures = "0.3"
ipld-core = "0.4"
rs-car = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_ipld_dagcbor = "0.6"
serde_json = "1.0"
tokio = { version = "1", features = ["time"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls", "url"] }
tracing = { version = "0.1" }
trait-variant = "0.1"
thiserror = "2"
